Contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,8 +134,7 @@
 }
 
 .card-image img {
-  background: white;
-  color: black;
+  color: white;
   border-radius: 50%;
   box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.5);
   max-width: 8rem;
